--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "14.0.2",
     "next-intl": "^3.1.0",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.6.4",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
